more style updates and fixed directions not showing for larger maps

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -23,4 +23,5 @@
 
 .description {
   font-size: 1.5rem;
+  margin: 2.5vh 0;
 }
