--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,24 +1,24 @@
 /* this started as Home.module.css but we renamed it */
 
 .container {
-  max-height: 93vh;
+  max-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  /* align-items: center; */
   background-color: #c7c6c5;
 }
 
 .main {
-  min-height: 93vh;
-  padding: 2.5rem 0 0 0;
+  min-height: 100vh;
+  padding: 2.5vh 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
   justify-content: flex-start;
-  align-items: center;
+  /* align-items: center; */
   font-size: 1.25rem;
   position: relative;
 }
