--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,7 @@ a {
   width: 90%;
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 
 .alternativeSelect {
@@ -116,6 +117,10 @@ input {
 .success {
   background-color: green;
 }
+
+/* .leaflet-routing-collapse-btn {
+  position: absolute;
+} */
 
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) and (display: flow-root) {
